--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   deploy:
+    name: Deploy via FTP
     runs-on: ubuntu-latest
+    concurrency: deploy_production # Bloqueia deploys simultâneos
 
     steps:
     - name: Clonar repositório
@@ -16,14 +18,14 @@ jobs:
     - name: Instalar dependências
       run: npm install
 
-    - name: Geraer a build (Vite)
+    - name: Gerar a build (Vite)
       run: npm run build
 
     - name: Deploy via FTP
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp.performancedigitalbr.com
+        server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./dist/
-        server-dir: /public_html/
+        server-dir: ./
